--- a/index.css
+++ b/index.css
@@ -30,6 +30,7 @@ p, h3, ul, li, h2, h1{
 
 h1{
     font-weight: 600;
+    margin-bottom: 30px;
 }
 
 h2{
@@ -41,7 +42,7 @@ h2{
 li{
     text-decoration: none;
     list-style-type: none;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     display: flex;
     flex-direction: column;
 }
@@ -55,11 +56,15 @@ h3{
     width: 100vw;
     z-index: -1;
     display: block;
-    height: 200vh;
+    height: 235vh;
 }
 
 a{
     color: rgb(127, 156, 218);
+}
+
+a:hover{
+    color: rgb(85, 125, 210);
 }
 
 .batches{
@@ -92,4 +97,15 @@ a{
 
 ul{
     flex: 1;
+}
+
+.about{
+    margin-top: 30px;
+    color: white;
+    margin-bottom: -20px;
+}
+
+b{
+    font-weight: 400;
+    color: rgb(127, 156, 218);
 }
